# ascii3d

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml  config.toml.example
.github/workflows/: ci.yml
benches/: common.rs  glyph_resolve.rs  raster_immediate.rs  raster_tiled.rs  render_end_to_end.rs
examples/: advanced_usage.rs  basic_usage.rs  terminal_run.rs
src/: bvh.rs  camera.rs  debug.rs  dither.rs  framegraph.rs  gbuffer.rs  glyph.rs  lib.rs  light.rs  material.rs  mesh.rs  prelude.rs  profile.rs  raster.rs  renderer.rs  scene.rs  shader.rs  temporal.rs  texture.rs  transform.rs
src/io/: gltf.rs  mod.rs  mtl.rs  obj.rs  stl.rs  texture.rs
src/targets/: buffer.rs  image.rs  mod.rs  terminal.rs
src/types/: color.rs  mod.rs
tools/: msys2-gcc.cmd.example
