[package]
name = "ascii3d"
version = "0.1.0"
edition = "2021"

exclude = [
    "/.cargo/*",
    "/tools/*",
    "/examples/*",
]

[dependencies]
glam = "0.30.10"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]
optional = true

[dependencies.crossterm]
version = "0.29.0"
optional = true

[dependencies.rayon]
version = "1.11.0"
optional = true

[features]
default = []

terminal = ["dep:crossterm"]
png = []
gltf = []
rayon = ["dep:rayon"]
image = ["dep:image"]
