[package]
name = "ascii3d"
version = "0.1.0"
edition = "2021"

exclude = [
    "/.cargo/*",
    "/tools/*",
    "/examples/*",
]

[dependencies]
glam = "0.30.10"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]
optional = true

[dependencies.crossterm]
version = "0.29.0"
optional = true

[dependencies.rayon]
version = "1.11.0"
optional = true

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.149"
optional = true

[dependencies.base64]
version = "0.22.1"
optional = true

[features]
default = []

terminal = ["dep:crossterm"]
png = []
gltf = ["dep:serde", "dep:serde_json", "dep:base64"]
rayon = ["dep:rayon"]
image = ["dep:image"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "raster_immediate"
harness = false

[[bench]]
name = "raster_tiled"
harness = false

[[bench]]
name = "glyph_resolve"
harness = false

[[bench]]
name = "render_end_to_end"
harness = false
